pushing the barriers of avoiding overflows by default even further

--- a/jsr/@lilycat/v3/src/normalize.css
+++ b/jsr/@lilycat/v3/src/normalize.css
@@ -104,6 +104,7 @@ a {
   :where(th, td) {
     border: solid 1px;
     min-height: 75px;
-    padding: 15px;
+    overflow: clip;
+    padding: clamp(0px, 100%, var(--md, 15px));
   }
 }
